# chamber-backup-diff

./: .bumpversion.cfg  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
chamber_backup_diff/: __init__.py  cli.py  diff.py  version.py
docs/: Makefile  chamber_backup_diff.rst  cli.rst  conf.py  index.rst  installation.rst  make.bat  modules.rst  readme.rst
tests/: __init__.py  test_cli.py  test_diff.py
tests/data/: new.tgz  old.tgz
